beans for jpa config

--- a/src/main/src/main/resources/config.properties
+++ b/src/main/src/main/resources/config.properties
@@ -7,3 +7,15 @@ jpa.username=root
 jpa.password=
 jpa.url=jdbc:mysql://127.0.0.1:3306/jpa
 jpa.driver=com.mysql.cj.jdbc.Driver
+
+
+# t = entityManager.getTransaction;
+# t.begin();
+
+# try
+# 1
+# 2
+# t.commit()
+
+# catch
+# t.rollback()
